Issue #3: Invoking transformer for transforming containers